--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -41,18 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "2"
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
+   "outputs": [],
    "source": [
     "1 + 1"
    ]
@@ -73,7 +64,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 1 + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +80,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +98,9 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,7 +116,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = a + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,12 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'hello world'"
+     },
+     "metadata": {},
+     "execution_count": 81
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,7 +177,11 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 5\n",
+    "b = 2\n",
+    "print(a, b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,7 +197,12 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = a\n",
+    "y = b\n",
+    "b = x\n",
+    "a = y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,7 +218,9 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"a vaut\", a, \"et b vaut\", b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,12 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a = \"hello world\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "expression cannot contain assignment, perhaps you meant \"==\"? (<ipython-input-37-b193ccf55521>, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-37-b193ccf55521>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    type(5 = 2)\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expression cannot contain assignment, perhaps you meant \"==\"?\n"
+     ]
+    }
+   ],
+   "source": [
+    "type(5 = 2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,10 +306,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "list"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "type ({5, 2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,12 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "int"
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "type(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,10 +363,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v = 57373"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,12 +381,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "57373 = 4781 x 11 + 8\n"
+    }
+   ],
+   "source": [
+    "print(v, \"=\", (v // 12), \"x\", \"11\", \"+\", v % 11)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,10 +408,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "10"
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
+   "source": [
+    "3 * 10 // 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -364,12 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
+   "source": [
+    "v % 2 == 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,12 +468,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1024"
+     },
+     "metadata": {},
+     "execution_count": 77
+    }
+   ],
+   "source": [
+    "2 ** 10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,12 +535,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "x = 0.1\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "102"
+     },
+     "metadata": {},
+     "execution_count": 96
+    }
+   ],
+   "source": [
+    "x = 0.1\n",
+    "print(\"x =\", x)\n",
+    "int(x*2**30) // 2**20"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -475,14 +592,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello world\n"
+    }
+   ],
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'"
+    "b = 'world'\n",
+    "print (a , b)"
    ]
   },
   {
