--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -231,13 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello world\n"
+    }
+   ],
    "source": [
-    "a = \"hello world\""
+    "a = \"hello world\"\n",
+    "print (a)"
    ]
   },
   {
