--- a/exercises/TD2_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD2_structures_controle/02_structures_controle.ipynb
@@ -42,14 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Not factors!\n"
+    }
+   ],
+   "source": [
+    "num1 = 14\n",
+    "num2 = 5\n",
+    "if (num1 % num2) == 0 or (num2 % num2) :\n",
+    "    print(\"Factors!\")\n",
+    "else : print(\"Not factors!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,14 +83,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "School is postponed\n"
+    }
+   ],
+   "source": [
+    "state = input (\"Enter a State :\")\n",
+    "if state == \"New Jersey\" :\n",
+    "    print(\"School isn't cancelled\")\n",
+    "elif state == \"North Carolina\" :\n",
+    "    print(\"School is postponed\")\n",
+    "elif state == \"Georgia\" :\n",
+    "    print(\"School is cancelled!\")\n",
+    "else :\n",
+    "    print(\"School's status is unknown\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,14 +138,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "dragon\n"
+    }
+   ],
+   "source": [
+    "year = input(\"Entrer une année\")\n",
+    "if (int(year) % 12) == 0 :\n",
+    "    print(\"monkey\")\n",
+    "elif (int(year) % 12) == 1 :\n",
+    "    print(\"rooster\")\n",
+    "elif (int(year) % 12) == 2 :\n",
+    "    print(\"dog\")\n",
+    "elif (int(year) % 12) == 3 :\n",
+    "    print(\"pig\")\n",
+    "elif (int(year) % 12) == 4 :\n",
+    "    print(\"rat\")\n",
+    "elif (int(year) % 12) == 5 :\n",
+    "    print(\"ox\")\n",
+    "elif (int(year) % 12) == 6 :\n",
+    "    print(\"tiger\")\n",
+    "elif (int(year) % 12) == 7 :\n",
+    "    print(\"rabbit\")\n",
+    "elif (int(year) % 12) == 8 :\n",
+    "    print(\"dragon\")\n",
+    "elif (int(year) % 12) == 9 :\n",
+    "    print(\"snake\")\n",
+    "elif (int(year) % 12) == 10 :\n",
+    "    print(\"horse\")\n",
+    "elif (int(year) % 12) == 11 :\n",
+    "    print(\"sheep\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,14 +195,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Mauvaise unité\nFreezing\nFreezing\n"
+    }
+   ],
+   "source": [
+    "temperature = int(input(\"Température\"))\n",
+    "unit = input(\"celsius ou fahrenheit ?\")\n",
+    "if unit == \"celsius\" :\n",
+    "    celsius = True\n",
+    "elif unit == \"fahrenheit\" :\n",
+    "    celsius = False\n",
+    "else :\n",
+    "    print(\"Mauvaise unité\")\n",
+    "\n",
+    "\n",
+    "if temperature <= 0 and celsius == True or (temperature <= 32 and celsius == False) :\n",
+    "    print(\"Freezing\")\n",
+    "else :\n",
+    "    print(\"Not freezing\")\n",
+    "\n",
+    "# Partie 2\n",
+    "\n",
+    "if temperature <= 0 and celsius == True :\n",
+    "    print(\"Freezing\")\n",
+    "elif temperature <= 32 and celsius == False :\n",
+    "    print(\"Freezing\")\n",
+    "else :\n",
+    "    print(\"Not freezing\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,14 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "L'année n'est pas bissextile\n"
+    }
+   ],
+   "source": [
+    "A = int(input(\"Entrer une année\"))\n",
+    "if (A % 4) == 0 and (A % 100) != 0 or (A % 400) == 0:\n",
+    "    print (\"L'année est bissextile\")\n",
+    "else :\n",
+    "    print(\"L'année n'est pas bissextile\")"
+   ]
   },
   {
    "source": [
@@ -182,10 +289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 85,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "set expected at most 1 argument, got 2",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-85-912ee949d470>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: set expected at most 1 argument, got 2"
+     ]
+    }
+   ],
+   "source": [
+    "set(1, 10)"
+   ]
   },
   {
    "source": [
@@ -575,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
