--- a/exercises/TD2_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD2_structures_controle/02_structures_controle.ipynb
@@ -399,7 +399,13 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "s1 = input(\"La date de naissance est dans le Set 1 ?\")\n",
+    "s2 = input(\"La date de naissance est dans le Set 2 ?\")\n",
+    "s3 = input(\"La date de naissance est dans le Set 3 ?\")\n",
+    "s4 = input(\"La date de naissance est dans le Set 4 ?\")\n",
+    "s5 = input(\"La date de naissance est dans le Set 5 ?\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -421,14 +427,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "65\nLa récompense est 0\n"
+    }
+   ],
+   "source": [
+    "nb_alea = random.randint(0, 99)\n",
+    "nb_user = int(input(\"Choisir un nombre entre 0 et 99\"))\n",
+    "print(nb_alea)\n",
+    "chiffre1 = nb_user // 10\n",
+    "chiffre2 = nb_user % 10\n",
+    "rchiffre1 = nb_alea // 10\n",
+    "rchiffre2 = nb_alea % 10\n",
+    "if nb_alea == nb_user :\n",
+    "    rec = 10000\n",
+    "elif chiffre1 == rchiffre2 and chiffre2 == rchiffre1 :\n",
+    "    rec = 3000\n",
+    "elif chiffre1 == rchiffre1 or chiffre1 == rchiffre2 or chiffre2 == rchiffre1 or chiffre2 == rchiffre2 :\n",
+    "    rec = 1000\n",
+    "else :\n",
+    "    rec = 0\n",
+    "print(\"La récompense est\", rec)"
+   ]
   },
   {
    "source": [
