--- a/exercises/TD2_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD2_structures_controle/02_structures_controle.ipynb
@@ -289,25 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "set expected at most 1 argument, got 2",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-85-912ee949d470>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: set expected at most 1 argument, got 2"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 \n\n2 4 6 8 10 12 14 16 18 20 "
      ]
     }
    ],
    "source": [
-    "set(1, 10)"
+    "for i in range(1, 11) :\n",
+    "    print(i, end = \" \")\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "for i in range(2, 21, 2) :\n",
+    "    print(i, end = \" \")"
    ]
   },
   {
@@ -323,17 +325,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "17.333333333333332\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Entrer un nombre\"))\n",
+    "somme = 0\n",
+    "for i in range(n) : #répéter n fois\n",
+    "    tmp = int(input(\"Entrer un nombre pour la moyenne\"))\n",
+    "    somme = somme + tmp\n",
+    "print(somme / n)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "moyenne: 19.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "somme = 0\n",
+    "cpt = 0\n",
+    "nb_choisi = int(input(\"Entrer un nombre pour la moyenne\"))\n",
+    "while nb_choisi != -1:\n",
+    "    nb_choisi = int(input(\"Entrer un nombre pour la moyenne\"))\n",
+    "    if nb_choisi == -1:\n",
+    "        break\n",
+    "    somme += tmp\n",
+    "    cpt += 1\n",
+    "print(\"moyenne:\", somme / cpt)"
+   ]
   },
   {
    "source": [
@@ -350,17 +386,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Factoriel de 100 vaut 933262154439441526816992388562667004907159682643816214685929638952175999932299156089414639761565182862536979208272237582511852109168640000000000000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 1\n",
+    "i = 2\n",
+    "n = int(input(\"Entrer un nombre\"))\n",
+    "while i <= n - 1:\n",
+    "    res *= i\n",
+    "    i += 1\n",
+    "print(\"Factoriel de\", n, \"vaut\", res)    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Factoriel de 100 vaut 93326215443944152681699238856266700490715968264381621468592963895217599993229915608941463976156518286253697920827223758251185210916864000000000000000000000000\nle nombre de chiffres du résultat est 158\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Entrer un nombre\"))\n",
+    "res = 1\n",
+    "for i in range(2, n + 1):\n",
+    "    res *= i\n",
+    "print(\"Factoriel de\", n, \"vaut\", res)\n",
+    "print(\"le nombre de chiffres du résultat est\", len(str(res)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -392,19 +459,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Ton jour de naissance est le 6\n"
+     ]
+    }
+   ],
    "source": [
-    "s1 = input(\"La date de naissance est dans le Set 1 ?\")\n",
-    "s2 = input(\"La date de naissance est dans le Set 2 ?\")\n",
-    "s3 = input(\"La date de naissance est dans le Set 3 ?\")\n",
-    "s4 = input(\"La date de naissance est dans le Set 4 ?\")\n",
-    "s5 = input(\"La date de naissance est dans le Set 5 ?\")\n"
+    "jour = 0\n",
+    "for i in range(5):\n",
+    "    rep = input(\"Jour de naissance dans l'ensemble Set \" + str(i+1) + \"? oui/non\")\n",
+    "    if rep == \"oui\":\n",
+    "        jour += 2 ** 1\n",
+    "print(\"Ton jour de naissance est le\", jour)"
    ]
   },
   {
@@ -427,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -438,13 +514,16 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "65\nLa récompense est 0\n"
+     "text": [
+      "Nombre obtenu : 33\nVotre nombre : 89\nLa récompense est 0 €\n"
+     ]
     }
    ],
    "source": [
     "nb_alea = random.randint(0, 99)\n",
     "nb_user = int(input(\"Choisir un nombre entre 0 et 99\"))\n",
-    "print(nb_alea)\n",
+    "print(\"Nombre obtenu :\", nb_alea)\n",
+    "print(\"Votre nombre :\", nb_user)\n",
     "chiffre1 = nb_user // 10\n",
     "chiffre2 = nb_user % 10\n",
     "rchiffre1 = nb_alea // 10\n",
@@ -457,7 +536,7 @@
     "    rec = 1000\n",
     "else :\n",
     "    rec = 0\n",
-    "print(\"La récompense est\", rec)"
+    "print(\"La récompense est\", rec, \"€\")"
    ]
   },
   {
@@ -471,10 +550,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Votre nombre est 21\nSa somme vaut 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Entrer un nombre comprit entre 10 et 99\"))\n",
+    "while n < 10 or n > 99 :\n",
+    "    n = int(input(\"Le nonbre doit être comprit entre 10 et 99. Choisir un nouveau nombre\"))\n",
+    "n1 = n // 10\n",
+    "n2 = n % 10\n",
+    "somme = n1 + n2\n",
+    "print(\"Votre nombre est\", n)\n",
+    "print(\"Sa somme vaut\", somme)"
+   ]
   },
   {
    "source": [
@@ -488,42 +584,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Nombre 1 : 4 \nNombre 2 : 7 \nDifférence : 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "n1 = random.randint(0, 9)\n",
+    "n2 = random.randint(0, 9)\n",
+    "diff = abs(n1 - n2)\n",
+    "rep = int(input(\"Entrer la différence entre les 2 nombres\"))\n",
+    "while rep != diff:\n",
+    "    rep = int(input(\"Mauvaise réponse. Réessayer\"))\n",
+    "print(\"Nombre 1 :\", n1, \"\\nNombre 2 :\", n2, \"\\nDifférence :\", diff)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-69-89f3504e2cac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mrep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Entrer la différence entre les 2 nombres\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mrep\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mdiff\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mrep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Mauvaise réponse. Réessayer\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0mtent\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mtent\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "import random\n",
+    "tent = 0\n",
+    "for i in range(5):\n",
+    "    n1 = random.randint(0, 9)\n",
+    "    n2 = random.randint(0, 9)\n",
+    "    diff = abs(n1 - n2)\n",
+    "    rep = int(input(\"Entrer la différence entre les 2 nombres\"))\n",
+    "    while rep != diff:\n",
+    "        rep = int(input(\"Mauvaise réponse. Réessayer\"))\n",
+    "        tent += 1\n",
+    "    tent += 1\n",
+    "    print(\"Partie\", i, \"gagnée\")\n",
+    "print(\"Gagné\\nNombre de tentatives :\", tent)"
    ]
   },
   {
    "source": [
     "**Exercice 13:**\n",
     "\n",
-    "Ecrire un programme qui permet de calculer le nombre de mots dans une phrase saisie par l'utilisateur."
+    "Ecrire un programme qui permet de calculer le nombre de mots dans une phrase saisie par l'utilisateur. (Compter le nombre d'espaces dans la phrase)"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Le nombre d'espaces dans la phrase Les aventuriers de votre tribu ont décidé de vous éliminer, et leur sentence est irrévocable. est : 14\n"
+     ]
+    }
+   ],
    "source": [
-    " "
+    " p = \"Les aventuriers de votre tribu ont décidé de vous éliminer, et leur sentence est irrévocable.\"\n",
+    " n = 0\n",
+    " for caractere in p:\n",
+    "     if caractere == \" \":\n",
+    "         n += 1\n",
+    "print(\"Le nombre d'espaces dans la phrase\", p, \"est :\", n)"
    ]
   },
   {
@@ -659,12 +809,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "*\n**\n***\n****\n*****\n******\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Solution 1\n",
+    "n = int(input(\"Saisir un nombre\"))\n",
+    "for i in range(n):\n",
+    "    print(\"*\" * (i + 1))\n",
+    "#Solution 2\n",
+    "x = 1\n",
+    "n = int(input(\"Saisir un nombre\"))\n",
+    "for i in range(n):\n",
+    "    print(x * \"*\")\n",
+    "    x +=1"
+   ]
   },
   {
    "source": [
@@ -685,12 +854,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                 *\n                **\n               ***\n              ****\n             *****\n            ******\n           *******\n          ********\n         *********\n        **********\n       ***********\n      ************\n     *************\n    **************\n   ***************\n  ****************\n *****************\n******************\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "n = int(input(\"Saisir un nombre\"))\n",
+    "for i in range(n):\n",
+    "    print(\" \" * (n - 1 - i) + \"*\" * (i + 1))\n"
+   ]
   },
   {
    "source": [
@@ -703,10 +885,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "100000 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "n = int(input(\"Saisir un nombre\"))\n",
+    "while n ** i < 10 ** 6:\n",
+    "    i += 1\n",
+    "i += -1\n",
+    "print(n ** i, i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
